syntax = "proto3";

package ionscale.v1;

option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

message GetDNSConfigRequest {
  uint64 tailnet_id = 1;
}

message GetDNSConfigResponse {
  DNSConfig config = 1;
}

message SetDNSConfigRequest {
  uint64 tailnet_id = 1;
  DNSConfig config = 2;
}

message SetDNSConfigResponse {
  DNSConfig config = 1;
}

message EnableHttpsCertificatesRequest {
  uint64 tailnet_id = 1;
}

message EnableHttpsCertificatesResponse {}

message DisableHttpsCertificatesRequest {
  uint64 tailnet_id = 1;
}

message DisableHttpsCertificatesResponse {}

message DNSConfig {
  bool magic_dns = 1;
  bool override_local_dns = 2;
  repeated string nameservers = 3;
  map<string, Routes> routes = 4;
  string magic_dns_suffix = 5;
}

message Routes {
  repeated string routes = 1;
}
